# parallax-v0

./: .gitignore  AGENTS.md  BLOCK_4_HANDOFF.md  CHANGELOG.md  CLAUDE.md  DEV_LOG.md  ISSUES.md  README.md  REFACTOR_PLAN.md  SKILL.md  VISION.md  cliff.toml  install.sh  justfile  pyproject.toml  run_fitbod_pipeline.py
.github/workflows/: notify-skill.yml  release.yml
.plexi/backlog/: skill-release-action.md
fixtures/real_smoke/: plan.yaml
fixtures/test_brief/: brief.yaml  brief_animate.yaml
fixtures/test_concept/: plan.yaml
scripts/: check-skill-version.sh  install.sh  pr-clean-merged.sh  promote.sh  release-version.sh
skills/parallax-v0/: SKILL.md
src/parallax/: __init__.py  agent.py  assembly.py  audio.py  avatar.py  brief.py  cli.py  context.py  elevenlabs.py  fal.py  ffmpeg_utils.py  forced_align.py  gemini_tts.py  headline.py  ingest.py  log.py  manifest.py  openrouter.py  openrouter_tts.py  plan.py  planner.py  preflight.py  pricing.py  produce.py  project.py  runlog.py  sessions.py  settings.py  shim.py  stages.py  stills.py  text_expand.py  tools.py  usage.py  (+7 more)
tests/: test_agent_e2e.py  test_align_scenes_contiguous.py  test_animate_scenes.py  test_aspect.py  test_assembly.py  test_asset_cache.py  test_audio_pad_onsets.py  test_audio_speedup.py  test_avatar_chain.py  test_backend_anthropic.py  test_backend_claude_code.py  test_brief.py  test_caption_chunker.py  test_caption_styles.py  test_captions_burn.py  test_character_image_frame_extract.py  test_cli_contract.py  test_cli_update.py  test_cli_wiring.py  test_clip_assembly.py  test_clip_reusable.py  test_clip_trim.py  test_dispatcher.py  test_elevenlabs.py  test_emotional_tags.py  test_fal.py  test_ffmpeg_utils.py  test_gemini_tts.py  test_headline_titles.py  test_hq_flag.py  test_image_out_flag.py  test_ingest.py  test_log.py  test_log_command.py  test_manifest.py  test_mock_reuse_guard.py  test_mocks_resolution.py  test_models.py  test_openrouter.py  test_openrouter_request_shapes.py  (+34 more)
(+41 files in other folders)
