[project]
name = "parallax"
version = "0.5.32"
description = "Minimal agentic creative production CLI — image generation v0"
requires-python = ">=3.11"
dependencies = [
    "whisperx",
    "httpx>=0.27",
    "pillow>=10.0.0",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.scripts]
parallax = "parallax.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parallax"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
